Fix dropdown css + partial collapsing behaviour

--- a/app/assets/stylesheets/partials/_invite_admin.scss
+++ b/app/assets/stylesheets/partials/_invite_admin.scss
@@ -71,8 +71,7 @@
       display: flex;
 
       .dropdown {
-        padding: 10px;
-        margin-left: 5px;
+        padding: 10px 10px 0 5px;
         margin-right: -20px;
 
         i {
